[package]
authors = ["Blas Rodriguez Irizar <rodrigblas@gmail.com>"]
edition = "2018"
name = "matecito"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/blasrodri/matecito"
description = "Concurrent LRU Cache (experimental)"

[dependencies]
twox-hash = "1.5.0"
parking_lot = "0.11.0"
matecito-dll = "0.1.0"
