[package]
authors = ["Blas Rodriguez Irizar <rodrigblas@gmail.com>"]
edition = "2018"
name = "matecito"
version = "0.1.5"
license = "MIT"
repository = "https://github.com/blasrodri/matecito"
description = "Concurrent LRU Cache (experimental)"
documentation = "https://docs.rs/matecito/"

[dependencies]
twox-hash = "1.6.0"
parking_lot = "0.11.0"
matecito-dll = "0.1.0"

[dev-dependencies]
criterion = "0.3.3"
rand = "0.7.3"

[[bench]]
name = "simple"
harness = false
